# cd-ipc-ssn

./: CMakeLists.txt  README.md  ipc_client.c  ipc_client.h  ipc_parser.c  ipc_parser.h  ipc_platform.h  ipc_server.c  ipc_server.h  test_ipc_client.c  test_ipc_server.c
src/: ipc_client.c  ipc_client.h  ipc_global.c  ipc_global.h  ipc_list.h  ipc_parser.c  ipc_parser.h  ipc_platform.h  ipc_protocol.c  ipc_protocol.h  ipc_server.c  ipc_server.h
src/util/: ipc_log.c  ipc_log.h
src/vsi/: ipc_event.c  ipc_mutex.c  ipc_platform.c  ipc_platform.h  ipc_socket.c  ipc_thread.c
test/: test_ipc_client.c  test_ipc_server.c
